Update BlogsServiceTest.java